[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.82.2",
    "psycopg2-binary>=2.9.11",
    "rich>=14.3.3",
    "sqlalchemy>=2.0.48",
    "typer>=0.24.1",
]
[project.scripts]
lyst = "lyst.main:run"
